# relay_pico

./: .gitignore  CMakeLists.txt  README.md  SonoffMiniR2Detector.cpp  SonoffMiniR2Detector.h  htmldata.c  lwipopts.h  main.cpp  ssi.cpp  ssi.h  tcpclient.c  tcpclient.h
html_files/: index.shtml
